vpc.tf
resource "aws_vpc" "dev" {
    cidr_block = var.CIDAR
    #enable_nat_gateway = true

}
